lab_simpsons_paradox

--- a/lab_simpsons_paradox/lab_simpsons_paradox.ipynb
+++ b/lab_simpsons_paradox/lab_simpsons_paradox.ipynb
@@ -37,18 +37,18 @@
     "# - Groups of 3 are ideal :)\n",
     "# - However, groups of 2 or 4 are fine too!\n",
     "#\n",
-    "# Question of the Day (QOTD) to Ask Your Group: \"When is your birthday?\"\n",
+    "# Question of the Day (QOTD) to Ask Your Group: \"What is your favorite music artist (besides Taylor Swift)?\"\n",
     "partner1_name = \"\"\n",
     "partner1_netid = \"\"\n",
-    "partner1_birthday = \"\"\n",
+    "partner1_artist = \"\"\n",
     "\n",
     "partner2_name = \"\"\n",
     "partner2_netid = \"\"\n",
-    "partner2_birthday = \"\"\n",
+    "partner2_artist = \"\"\n",
     "\n",
     "partner3_name = \"\"\n",
     "partner3_netid = \"\"\n",
-    "partner3_birthday= \"\""
+    "partner3_artist = \"\""
    ]
   },
   {
@@ -207,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Part 1: Working with the GPA Dataset\n",
+    "# Working with the GPA Dataset\n",
     "Now that we have that extra column set up, we can perform basic mathematical analysis on the GPA Dataset to get insight towards our question:\n",
     "- *Is it easier to get an A in STAT or CS courses at UIUC?*\n",
     "\n",
@@ -233,8 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_STAT = ...\n",
-    "df_STAT"
+    "df_STAT = ..."
    ]
   },
   {
@@ -253,8 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_CS = ...\n",
-    "df_CS"
+    "df_CS = ..."
    ]
   },
   {
@@ -357,7 +355,7 @@
    "source": [
     "### Analysis: Good Comparison?\n",
     "**Q: What conclusion can you take from the overall percentages found above when asking the original question:**\n",
-    "- *Is it easier to get an A in STAT or CS courses at UIUC?*"
+    "- *Is it significantly easier to get an A in STAT or CS courses at UIUC, or is so close it would be hard to make general conclusions?*"
    ]
   },
   {
@@ -395,7 +393,7 @@
    "source": [
     "## An Extra Consideration\n",
     "\n",
-    "If you look at the `Year` column of our GPA dataset, you might notice that we have some old data in our set - all the way back to **2010**! This means we aren't really answering our question from the perspective of a student now. \n",
+    "If you look at the `Year` column of our GPA dataset, you might notice that we have some old data in our dataset - all the way back to **2010**! This means we aren't really answering our question from the perspective of a student now. \n",
     "\n",
     "If we want to know if it is easier to **currently** get an A in a STAT or CS course, we should control for the **date** of the data by looking at more **recent years** specifically."
    ]
@@ -427,8 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_stat_recent = ...\n",
-    "df_stat_recent"
+    "df_stat_recent = ..."
    ]
   },
   {
@@ -437,8 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cs_recent = ...\n",
-    "df_cs_recent"
+    "df_cs_recent = ..."
    ]
   },
   {
@@ -447,8 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_stat_old = ...\n",
-    "df_stat_old"
+    "df_stat_old = ..."
    ]
   },
   {
@@ -457,8 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cs_old = ...\n",
-    "df_cs_old"
+    "df_cs_old = ..."
    ]
   },
   {
@@ -751,7 +745,7 @@
    "source": [
     "## Happiness vs. Battery Life\n",
     "\n",
-    "There is a narrative that \"GenZ's are only happy when they're on their phone\" -- let's explore the relationship between your happiness and your cell phone's battery life!\n",
+    "There is a narrative that \"Gen Zs are only happy when they're on their phone\" -- let's explore the relationship between your happiness and your cell phone's battery life!\n",
     "\n",
     "With the Hello Dataset, there's two questions with numeric responses that can help us explore this:\n",
     "- From 1 to 10, how happy are you right now?\n",
@@ -775,7 +769,7 @@
     "From this, create three DataFrames that contain subsets of the Hello Dataset: \n",
     "- `df_very_happy`: including everyone who is \"very happy\" ($\\space \\geq 9 \\space$)\n",
     "- `df_happy`: including everyone who is \"happy\" ($\\space <9 $ and $\\geq 3 \\space$)\n",
-    "- `df_unhappy`: including everyone who gets \"bad sleep\" on average ($\\space < 3 \\space$)\n",
+    "- `df_unhappy`: including everyone who is \"unhappy\" ($\\space < 3 \\space$)\n",
     "\n",
     "The `happiness_question` question has been provided to you as a **string** for ease of DataFrame column access. "
    ]
@@ -831,9 +825,9 @@
     "# - This read-only cell contains test cases for your previous cell.\n",
     "# - If this cell runs without any errors, you PASSED all test cases!\n",
     "# - If this cell results in any errors, check your previous cell, make changes, and RE-RUN your code and then this cell.\n",
-    "assert(len(df_very_happy) == 54 ), \"Double check your conditional used to create df_very_happy\"\n",
-    "assert(len(df_happy) == 519 ), \"Double check your conditional used to create df_happy\"\n",
-    "assert(len(df_unhappy) == 36 ), \"Double check your conditional used to create df_unhappy\"\n",
+    "assert(len(df_very_happy) == 54 ), \"Double check your conditional used to create df_very_happy.\"\n",
+    "assert(len(df_happy) == 519 ), \"Double check your conditional used to create df_happy.\"\n",
+    "assert(len(df_unhappy) == 36 ), \"Double check your conditional used to create df_unhappy.\"\n",
     "\n",
     "## == SUCCESS MESSAGE ==\n",
     "# You will only see this message (with the emoji showing) if you passed all test cases:\n",
@@ -848,7 +842,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Puzzle 2.2: Average Number of Classes by Group\n",
+    "### Puzzle 2.2: Average Phone Battery Percentage by Group\n",
     "\n",
     "Now find the **average phone battery percentage** of each group (`df_very_happy`, `df_happy`, and `df_unhappy`):\n",
     "\n",
@@ -874,8 +868,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phone_battery_question = 'What is your phone battery percentage currently at?'\n",
-    "\n",
     "happy_people_avg_phone_battery = ...\n",
     "happy_people_avg_phone_battery"
    ]
@@ -909,9 +901,9 @@
     "# - This read-only cell contains test cases for your previous cell.\n",
     "# - If this cell runs without any errors, you PASSED all test cases!\n",
     "# - If this cell results in any errors, check your previous cell, make changes, and RE-RUN your code and then this cell.\n",
-    "assert(math.isclose(very_happy_people_avg_phone_battery,  56.96296296296296)), \"The average number of classes for those with good sleep does not appear to have been correctly calculated.\"\n",
-    "assert(math.isclose(happy_people_avg_phone_battery,  59.335907335907336)), \"The average number of classes for those with bad sleep does not appear to have been correctly calculated.\"\n",
-    "assert(math.isclose(unhappy_people_avg_phone_battery,  56.02777777777778)), \"The average number of classes for those with bad sleep does not appear to have been correctly calculated.\"\n",
+    "assert(math.isclose(very_happy_people_avg_phone_battery,  56.96296296296296)), \"The average phone battery percentage for very happy people does not appear to have been correctly calculated.\"\n",
+    "assert(math.isclose(happy_people_avg_phone_battery,  59.335907335907336)), \"The average phone battery percentage for happy people does not appear to have been correctly calculated.\"\n",
+    "assert(math.isclose(unhappy_people_avg_phone_battery,  56.02777777777778)), \"The average phone battery percentage for unhappy people does not appear to have been correctly calculated.\"\n",
     "\n",
     "## == SUCCESS MESSAGE ==\n",
     "# You will only see this message (with the emoji showing) if you passed all test cases:\n",
@@ -994,7 +986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
