--- a/lab_gpa/lab_gpa.ipynb
+++ b/lab_gpa/lab_gpa.ipynb
@@ -673,7 +673,9 @@
     "\n",
     "In the following cell, create a new DataFrame, `df_year`, which will contain this grouped GPA data. Using `df.groupby()`, **group** our original DataFrame (`df`) by `Year` so each **letter grade column** contains the **total number of students** receiving said grade in that `Year`. \n",
     "\n",
-    "Remember: You did something quite similar in Puzzle 2.1 to create `df_subject`. This might help you decide what type of **aggregation** (`.agg()`) to use when **grouping**. And, don't forget to `.reset_index()`!"
+    "Remember: You did something quite similar in Puzzle 2.1 to create `df_subject`. This might help you decide what type of **aggregation** (`.agg()`) to use when **grouping**.\n",
+    "- In this puzzle, you should also use `numeric_only=True` in your `agg` function, just like in Puzzle 2.1.\n",
+    "- And, don't forget to `.reset_index()`! :)"
    ]
   },
   {
