--- a/lab_gpa/lab_gpa.ipynb
+++ b/lab_gpa/lab_gpa.ipynb
@@ -279,8 +279,8 @@
     "assert( len(df_hard) == len(df_easy) == 50 ), \"Your df_hard and df_easy should be picking the 50 courses with the lowest / highest average GPA respectively. Please double check that you are selecting 50 courses.\"\n",
     "assert( math.isclose(df_hard['Average GPA'].sum(), 80.30481775738464) ), \"Your df_hard is calculated incorrectly. Make sure you are finding the 50 courses with the lowest Average GPA.\"\n",
     "assert( math.isclose(df_easy['Average GPA'].sum(), 199.38547959954138) ), \"Your df_easy is calculated incorrectly. Make sure you are finding the 50 courses with the highest Average GPA.\"\n",
-    "assert( math.isclose(hard_avg, 166.42) ), \"Your calculation for the average course Number of 'hard' courses is incorrect. Make sure you are finding the mean of course numbers of df_hard.\"\n",
-    "assert( math.isclose(easy_avg, 372.74) ), \"Your calculation for the average course Number of 'easy' courses is incorrect. Make sure you are finding the mean of course numbers of df_easy.\"\n",
+    "assert( math.isclose(hard_avg, 166.42) ), \"Your calculation for the average course number of 'hard' courses is incorrect. Make sure you are finding the mean of course numbers of df_hard.\"\n",
+    "assert( math.isclose(easy_avg, 372.74) or math.isclose(easy_avg, 375.56)), \"Your calculation for the average course number of 'easy' courses is incorrect. Make sure you are finding the mean of course numbers of df_easy.\"\n",
     "\n",
     "## == SUCCESS MESSAGE ==\n",
     "# You'll only see this message (With the emoji showing) if you passed all test cases:\n",
@@ -352,7 +352,7 @@
     "\n",
     "**DO I USE `count` or `sum`?**:\n",
     "- Each row in `df` represents a **course section** of a `Subject` with the **number of students** receiving grades for that course.\n",
-    "- Do you want to \"count\" the number or rows, or \"sum\" the number of students receiving each grade?\n",
+    "- Do you want to \"count\" the number of rows, or \"sum\" the number of students receiving each grade?\n",
     "- And, don't forget to `.reset_index()`. :)"
    ]
   },
@@ -387,7 +387,7 @@
     "# - If this cell results in any errors, check your previous cell(s), make changes, and RE-RUN your code and then this cell.\n",
     "import math\n",
     "assert( 'df_subject' in vars() ), \"Make sure your DataFrame grouped by 'Subject' is named 'df_subject'.\" \n",
-    "assert( len(df_subject) == 172 ), \"Make sure you are grouping by 'Subject'. There are 172 Subjects in our original `df`, so the length of `df_subject` should be 170.\"\n",
+    "assert( len(df_subject) == 172 ), \"Make sure you are grouping by 'Subject'. There are 172 Subjects in our original `df`, so the length of `df_subject` should be 172.\"\n",
     "assert( math.isclose(df_subject.Students.mean(), 23723.837209302324) ), \"Double-check that you are aggregating your df_subject correctly.\"\n",
     "\n",
     "## == SUCCESS MESSAGE ==\n",
@@ -404,7 +404,7 @@
    "outputs": [],
    "source": [
     "### Puzzle 2.2: Fixing our `Average GPA` Column\n",
-    "Your intuition may tell you that some columns in `df_subject` look off. This is correct - given the way we've grouped the data to find **total student counts** by grade , the `Year` and `Average GPA` columns are incorrect. \n",
+    "Your intuition may tell you that some columns in `df_subject` look off. This is correct - given the way we've grouped the data to find **total student counts** by grade, the `Year` and `Average GPA` columns are incorrect. \n",
     "\n",
     "Let's fix this by redefining the `Average GPA` column in our `df_subject`.\n",
     "\n",
@@ -732,7 +732,7 @@
     "\n",
     "The `Average GPA` column should contain the **weighted average GPA** of each `Year` by taking into account the **number of students** who received each letter grade in said `Year`. \n",
     "\n",
-    "Remember: You've done this twice before in **Puzzle 1.1** and **Puzzle 2.1** - just make sure you use `df_year` this time! "
+    "Remember: You've done this twice before in **Puzzle 1.1** and **Puzzle 2.2** - just make sure you use `df_year` this time! "
    ]
   },
   {
@@ -890,7 +890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
