--- a/lab_favorites/lab_favorites.ipynb
+++ b/lab_favorites/lab_favorites.ipynb
@@ -367,11 +367,11 @@
     "assert( 'coppers' in df_startingHands ), \"Your DataFrame is missing a `coppers` column.\"\n",
     "assert( 'estates' in df_startingHands ), \"Your DataFrame is missing an `estates` column.\"\n",
     "for i in copper_counts:\n",
-    "    assert ( i in list(df_startingHands['coppers']) ), f\"Your DataFrame is missing the copper count {i}.\"\n",
+    "    assert ( i in list(df_startingHands['coppers']) ), f\"Your DataFrame is missing instances in which you have {i} coppers in your starting hand. Check your starting hand calculations or your dictionary variables.\"\n",
     "for i in estate_counts:\n",
-    "    assert ( i in list(df_startingHands['estates']) ), f\"Your DataFrame is missing the estate count {f}.\"\n",
+    "    assert ( i in list(df_startingHands['estates']) ), f\"Your DataFrame is missing instances in which you have {i} estates in your starting hand. Check your starting hand calculations or your dictionary variables.\"\n",
     "\n",
-    "assert ( set(df_startingHands['coppers'] + df_startingHands['estates']) ), \"A starting hand should always have 5 cards. Your simulation produced an instance where this is not true.\"\n",
+    "assert ( set(df_startingHands['coppers'] + df_startingHands['estates']) == {5}), \"A starting hand should always have 5 cards. Your simulation produced an instance where this is not true.\"\n",
     "\n",
     "## == SUCCESS MESSAGE ==\n",
     "# You will only see this message (with the emoji showing) if you passed all test cases:\n",
@@ -506,7 +506,7 @@
     "We will need to use Python to help us process large images, but we will use the large image to understand an image!  For this lab, we have provided the function for you to load images as a DataFrame.\n",
     "\n",
     "- Make sure to `import DISCOVERY` to import the code specific for DISCOVERY\n",
-    "- Then use `DISCOVERY.df_image(\"sample.png\")` to load the image data into a DataFrame `df`\n",
+    "- Then use `DISCOVERY.df_image(\"sample.png\")` to load the image data into a DataFrame `df_pixels`\n",
     "\n"
    ]
   },
@@ -516,7 +516,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the image into a DataFrame `df`:"
+    "# Load the image into a DataFrame `df_pixels`:"
    ]
   },
   {
@@ -538,10 +538,10 @@
     "# - This read-only cell contains test cases for your previous cell.\n",
     "# - If this cell runs without any errors, you PASSED all test cases!\n",
     "# - If this cell results in any errors, check your previous cell, make changes, and RE-RUN your code and then this cell.\n",
-    "assert( len(df) == 9 ), \"The length of your `df` should be 9 - there's 9 pixels in the sample.png!\"\n",
-    "assert( len(df.columns.to_list() ) == 5 ), \"There should be five columns in your `df`.\"\n",
+    "assert( len(df_pixels) == 9 ), \"The length of your `df_pixels` should be 9 - there's 9 pixels in the sample.png!\"\n",
+    "assert( len(df_pixels.columns.to_list() ) == 5 ), \"There should be five columns in your `df_pixels`.\"\n",
     "for col in ['x', 'y', 'r', 'g', 'b']:\n",
-    "    assert ( col in df ), f\"Your `df` is missing the {col} column. Make sure you're using the `DISCOVERY.df_image()` function!\"\n",
+    "    assert ( col in df_pixels ), f\"Your `df_pixels` is missing the {col} column. Make sure you're using the `DISCOVERY.df_image()` function!\"\n",
     "\n",
     "## == SUCCESS MESSAGE ==\n",
     "# You will only see this message (with the emoji showing) if you passed all test cases:\n",
@@ -573,7 +573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[ (df.x == 0) & (df.y == 0) ]"
+    "df_pixels[ (df_pixels.x == 0) & (df_pixels.y == 0) ]"
    ]
   },
   {
@@ -591,7 +591,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[ (df.x == 1) & (df.y == 0) ]"
+    "df_pixels[ (df_pixels.x == 1) & (df_pixels.y == 0) ]"
    ]
   },
   {
@@ -985,7 +985,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
