--- a/project-mosaic/mosaic.ipynb
+++ b/project-mosaic/mosaic.ipynb
@@ -282,16 +282,14 @@
    "source": [
     "# Section 5: Splitting Up Your Base Image\n",
     "\n",
-    "To create a mosaic from an image, we must split the base image into small regions to be replaced with the tile images.  To accomplish this, we need a function that will **find the average color of a small region of an image**.\n",
+    "To create a mosaic from an image, we must split the base image into small regions to be replaced with the tile images. To accomplish this, we need a function that will **find the subset of pixels found in a region of an image**.\n",
     "\n",
-    "- In our `sample.png` (from Section 1), we might need the color of just a 2x2 square from the 3x3 image.\n",
-    "- In `findAverageImageColor` you already found the average color of the full image.\n",
-    "- Now you just need to find the average image color of the subset of the image!\n",
+    "- Thinking about the 3x3 pixel image `sample.png` (from Section 1), we might need a 2x2 square (or 1x3 rectangle) of pixels instead of using all 3x3 pixels.\n",
     "\n",
     "\n",
     "### Your `findImageSubset` function\n",
     "\n",
-    "Create a function `findImageSubset` that finds the subset of the image starting at (`x`, `y`), spanning `width` pixels wide and `height` pixels tall. Your function should return the **average color of that region**.\n",
+    "Create a function `findImageSubset` that finds the subset of the image starting at (`x`, `y`), spanning `width` pixels wide and `height` pixels tall. Your function should return the **subset of all the pixels in that region of the image**.\n",
     "\n",
     "- Example: `findImageSubset(image, x=0, y=0, width=3, height=3)` -- returns subset of all the pixels in the square defined by: x=0...2 and y=0...2 (9 total pixels)\n",
     "\n",
