--- a/lab_similarity/lab_similarity.ipynb
+++ b/lab_similarity/lab_similarity.ipynb
@@ -140,7 +140,9 @@
     "Before finding people you are **similar to**, you have to find **yourself** - literally!\n",
     "\n",
     "### Puzzle 1.1: Your Row\n",
-    "In the following cell, write the Python code to create a **new** DataFrame with only yourself, named `df_me`:"
+    "In the following cell, write the Python code to create a **new** DataFrame with only yourself, named `df_me`:\n",
+    "\n",
+    "*Note: if you cannot find yourself in the Hello Dataset, try adding a space after your name within the string. If you did not fill out the Hello Survey, pick one of your TAs, CAs, or Professor Karle or Wade! Their names are in the survey in the format of \"TA Alex\" or \"Prof. Karle\".*"
    ]
   },
   {
@@ -295,7 +297,7 @@
    "source": [
     "Before we begin, we have to think about our approach to finding your DISCOVERY twin.\n",
     "\n",
-    "You may have noticed our Hello Dataset has **almost 100 questions**. Instead of finding the most similar person to you using **every question**, we'll pick out a few questions to analyze. \n",
+    "You may have noticed our Hello Dataset has **more than 100 questions**. Instead of finding the most similar person to you using **every question**, we'll pick out a few questions to analyze. \n",
     "\n",
     "**But first, we need to revisit the questions.**\n",
     "\n",
@@ -551,15 +553,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "## == PUZZLE 2.2 TEST CASES ==\n",
     "# - This read-only cell contains test cases for your previous cell.\n",
     "# - If this cell runs without any errors, you PASSED all test cases!\n",
@@ -687,6 +680,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Puzzle 3.3: Your Lab Twin!\n",
+    "\n",
+    "Similarly to Puzzle 3.1, find your lab section twin (the person in your lab section who has the **highest Similarity Score** to you)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "..."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "execution_count": 0,
@@ -695,7 +708,7 @@
    "source": [
     "#### **➡️ Right now, once you have that person, find them in lab!**<br>➡️ *(If they're not here, look for the next similar person.)*\n",
     "\n",
-    "Help them finish their lab and let them find their DISCOVERY twin!  *(Are you twins of each other?)*\n",
+    "Help them get up to this point in the lab and let them find their DISCOVERY twin!  *(Are you twins of each other?)*\n",
     "\n",
     "Note that there may be ties in `Similarity Score` due to the usage of only parts of the dataset. If you're curious, you can go back and **add more questions** to your `questions` list and `similarity(row)` function, rerunning the code to have more evaluative similarity scores. "
    ]
@@ -707,7 +720,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Puzzle 3.3: The Course Staff\n",
+    "### Puzzle 3.4: The Course Staff\n",
     "A lot of wonderful course staff work together to bring you all the content for Data Science Discovery. \n",
     "\n",
     "The course staff of 107 consists of the **Professors, TAs, and CAs**. As you saw in the previous parts, they've all completed the Hello Survey too! \n",
@@ -774,7 +787,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Puzzle 3.4: Course Staff Twin!\n",
+    "### Puzzle 3.5: Course Staff Twin!\n",
     "\n",
     "Now that we have the course staff responses in `df_staff`, find your course staff twin (the staff member who has the **highest Similarity Score** to you)."
    ]
@@ -852,7 +865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
