--- a/lab_similarity/lab_similarity.ipynb
+++ b/lab_similarity/lab_similarity.ipynb
@@ -710,6 +710,10 @@
     "\n",
     "Help them get up to this point in the lab and let them find their DISCOVERY twin!  *(Are you twins of each other?)*\n",
     "\n",
+    "➡️ Once you are **BOTH** to this section, introduce yourself and your DISCOVERY lab section \"twin\" to your lab TA. <br>\n",
+    "➡️ Make sure you know what your \"Similarity Score\" to your twin is! <br>\n",
+    "➡️ If you do this introduction to your TA **in-person during your lab section, you will earn +1 EC**! :)\n",
+    "\n",
     "Note that there may be ties in `Similarity Score` due to the usage of only parts of the dataset. If you're curious, you can go back and **add more questions** to your `questions` list and `similarity(row)` function, rerunning the code to have more evaluative similarity scores. "
    ]
   },
