--- a/lab_justice/lab_justice.ipynb
+++ b/lab_justice/lab_justice.ipynb
@@ -260,7 +260,7 @@
    "source": [
     "### Analysis: Simulating Juries\n",
     "\n",
-    "**Group Discussion: Interpret the results of your histogram. How does your histogram provide evidence for or against the claim that the jury wasn't fair?  What does this tell us about this case?  Do you think this could have happened by chance?  If so, why? If not, why not?**\n",
+    "**Group Discussion: Interpret the results of your frequency bar chart. How does your bar chart provide evidence for or against the claim that the jury wasn't fair?  What does this tell us about this case?  Do you think this could have happened by chance?  If so, why? If not, why not?**\n",
     "\n",
     "**Q2: Write down the most interesting takeaway from your group discussion.**"
    ]
@@ -408,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Now, using your results from `df2`, generate a second frequency bar chart.  *(You can return to Section 1.3 to refresh your memory on how to do this.)*"
+    "Now, using your results from `df2`, generate a second frequency bar chart  *(you can return to Section 1.3 to refresh your memory on how to do this)*."
    ]
   },
   {
@@ -596,7 +596,7 @@
    "source": [
     "# Part 2: Names and Resumes\n",
     "\n",
-    "Our next problem comes from a study looking at the correlation between names and the job hiring process.  You can read the fully study here if you’d like: \n",
+    "Our next problem comes from a study looking at the correlation between names and the job hiring process.  You can read the full study here if you’d like: \n",
     ">[https://www.nber.org/system/files/working_papers/w9873/w9873.pdf](https://www.nber.org/system/files/working_papers/w9873/w9873.pdf) \n",
     "\n",
     "Here’s a summary of some findings from their study: \n",
@@ -628,11 +628,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "**Assuming** that **any given resume** has about a **20% chance** of getting a call back, let’s simulate this study.\n",
+    "**Assuming** that **any given resume** has about an **8.47% chance** of getting a callback **(the average callback rate observed across all resumes)**, let’s simulate this study.\n",
     "\n",
     "Since the content of the resumes are identical, we should expect to get an **equal number of callbacks** for both types of names.  In other words, picking the callbacks should be like **random sampling**. \n",
     "\n",
-    "We've simulated the data in `resumes.csv` and wrote part of a simulation function to randomly sample 20% of the **4,890** resumes 10,000 times. You will load in the data and complete the simulation below. "
+    "We've simulated the data in `resumes.csv` and wrote part of a simulation function to randomly sample 8.47% of the **4,890** resumes 10,000 times. You will load in the data and complete the simulation below. "
    ]
   },
   {
@@ -681,7 +681,7 @@
     "# - If this cell runs with the success message as your output, you PASSED all test cases!\n",
     "# - If this cell results in any errors, check your previous cell, make changes, & RE-RUN your code & then this cell.\n",
     "assert('df3' in vars()), \"Your DataFrame of resumes should be named `df3`.\"\n",
-    "assert((len(df3) == 4890) & ('Resumes' in df3.columns.to_list())), \"This isn't the Dataset we are looking for. Make sure you are loading the resumes.csv file.\"\n",
+    "assert((len(df3) == 4890) & ('Resumes' in df3.columns.to_list())), \"This isn't the dataset we are looking for. Make sure you are loading the resumes.csv file.\"\n",
     "\n",
     "## == SUCCESS MESSAGE ==\n",
     "# You'll only see this message (With the emoji showing) if you passed all test cases:\n",
@@ -698,9 +698,9 @@
    "source": [
     "## Puzzle 2.2: Complete the Function\n",
     "\n",
-    "Below is an incomplete function that **samples 20% of the 4890 rows** and **counts the numbers of 0s and 1s**. \n",
+    "Below is an incomplete function that **samples 8.47% of the 4890 rows** and **counts the numbers of 0s and 1s**. \n",
     "\n",
-    "Complete the **second line of code** inside this function to **randomly sample 20% of `df3`** and store the results in a DataFrame named `df4`. \n",
+    "Complete the **second line of code** inside this function to **randomly sample 8.47% of `df3`** and store the results in a DataFrame named `df4`. \n",
     "\n",
     "Make sure to run the cell after filling in the code to see our results!"
    ]
@@ -712,10 +712,10 @@
    "outputs": [],
    "source": [
     "def simulateResumes():\n",
-    "    ... ## fill in this line of code that randomly samples 20% of df3 and stores the results in df4\n",
-    "    white_sounding = len(df4[df4.Resumes == 0])\n",
-    "    black_sounding = len(df4[df4.Resumes == 1])\n",
-    "    return white_sounding, black_sounding\n",
+    "     ... ## fill in this line of code that randomly samples 8.47% of df3 and stores the results in df4\n",
+    "     white_sounding = len(df4[df4.Resumes == 0])\n",
+    "     black_sounding = len(df4[df4.Resumes == 1])\n",
+    "     return white_sounding, black_sounding\n",
     "    \n",
     "simulateResumes()"
    ]
@@ -742,7 +742,7 @@
     "assert callable(simulateResumes), \"You should have defined `simulateResumes` as a function above.\"\n",
     "assert isinstance(simulateResumes(), tuple), \"Your simulateResumes() function should return a pair of ints (integers) that represents the number of white-sounding and black-sounding names chosen.\"\n",
     "test_instance = simulateResumes()\n",
-    "assert(test_instance[0] + test_instance[1] == 978), \"Your function doesn't return the correct number of resumes. Make sure you are sampling 20 percent of df3.\"\n",
+    "assert(test_instance[0] + test_instance[1] == 414), \"Your function doesn't return the correct number of resumes. Make sure you are sampling 8.47% percent of df3.\"\n",
     "\n",
     "\n",
     "## == SUCCESS MESSAGE ==\n",
@@ -760,7 +760,7 @@
    "source": [
     "## Simulating The Study\n",
     "\n",
-    "Now that we've defined our `simulateResumes()` function properly, we can simulate randomly picking **20% of the 4890 resumes 10,000 times**! This has been **done already in the cell below**. Each time we call `simulateResumes()`, the 20% that we sample represents the resumes that got **callbacks**. We're then creating a DataFrame named `df5` that contains the number of black sounding names and white sounding names. \n",
+    "Now that we've defined our `simulateResumes()` function properly, we can simulate randomly picking **8.47% of the 4890 resumes 10,000 times**! This has been **done already in the cell below**. Each time we call `simulateResumes()`, the 8.47% that we sample represents the resumes that got **callbacks**. We're then creating a DataFrame named `df5` that contains the number of black sounding names and white sounding names. \n",
     "\n",
     "**DO NOT change anything in the following cell, just run it!**"
    ]
@@ -790,7 +790,7 @@
     "\n",
     "Now that we've got our simulation results stored in `df5`, let's do some calculations and analysis. \n",
     "\n",
-    "We will calculate **average callback rate** for **each group of names** in the simulation (these should be **close to 20%** for each group of names) using this formula: $$\\frac{\\text{callback mean for X group}}{\\text{ number of submitted resumes for X group}}$$\n",
+    "We will calculate **average callback rate** for **each group of resumes** in the simulation (these should be **close to 8.47%** for each group of resumes) using this formula: $$\\frac{\\text{callback mean for X group}}{\\text{ number of submitted resumes for X group}}$$\n",
     "\n",
     "First, using the cell below, calculate the **average callback rate** of the resumes with **\"white sounding\"** names by taking the **average number of white sounding resumes that got callbacks** from the simulation data and dividing it by the **number of white sounding resumes** submitted in the study, storing your decimal result in the variable `avg_white`.  \n",
     "\n",
@@ -849,8 +849,8 @@
     "import math \n",
     "assert('avg_white' in vars() and 'avg_black' in vars()), \"Your probabilities should be named `avg_white` and `avg_black`.\"\n",
     "assert(isinstance(avg_white, float) and isinstance(avg_black, float)), \"Your probabilities should be a percentage represented as a decimal (float) value.\"\n",
-    "assert(math.isclose(avg_white, 0.2, abs_tol = 0.005)), \"Your avg callback rate for resumes with white-sounding names is incorrect.\"\n",
-    "assert(math.isclose(avg_black, 0.2, abs_tol = 0.005)), \"Your avg callback rate for resumes with black-sounding names is incorrect.\"\n",
+    "assert(math.isclose(avg_white, 0.0847, abs_tol = 0.005)), \"Your avg callback rate for resumes with white-sounding names is incorrect.\"\n",
+    "assert(math.isclose(avg_black, 0.0846, abs_tol = 0.005)), \"Your avg callback rate for resumes with black-sounding names is incorrect.\"\n",
     "\n",
     "## == SUCCESS MESSAGE ==\n",
     "# You'll only see this message (With the emoji showing) if you passed all test cases:\n",
@@ -867,7 +867,7 @@
    "source": [
     "### Analysis: Simulation versus Reality\n",
     "\n",
-    "**Q9: Think about how these callback percentages we've calculated above (`avg_white` and `avg_black`) compare to the actual percentages (10.33% vs. 6.87%).  What does this say about discrimination based on names?**"
+    "**Q9: Think about how these callback percentages we've calculated above (`avg_white` and `avg_black`) compare to the actual percentages (10.06% vs. 6.87%).  What does this say about discrimination based on names?**"
    ]
   },
   {
@@ -962,7 +962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
