--- a/lab_probability/lab_probability.ipynb
+++ b/lab_probability/lab_probability.ipynb
@@ -483,7 +483,7 @@
     "- For **none of the birthdays** to match, the second person would need to have a birthday on one of the other **364 days**, but the third person would need to have a birthday that **isn't shared** with the unique **first OR second person's birthday**. How many days does that leave? \n",
     "\n",
     "\n",
-    "Use these hints, find the probability that at least two people share a birthday in a party of three, storing your numerical answer in `p_three_person_party`:"
+    "Using these hints, find the probability that at least two people share a birthday in a party of three, storing your numerical answer in `p_three_person_party`:"
    ]
   },
   {
@@ -911,7 +911,7 @@
    "source": [
     "### Puzzle 3.1: Collecting Simulation Results\n",
     "\n",
-    "Using `simulation_for_taylor()`, collect the results of running this simulation at least **1000** times and store the result in `df_taylor`. \n",
+    "Using `simulation_for_taylor()`, collect the results of running this simulation at least **1,000** times and store the result in `df_taylor`. \n",
     "\n",
     "Store your results in the DataFrame `df_taylor` under any column name that fits the context. For context, we are populating `df_taylor` with 1,000 simulations that contains the number of people needed to **satisfy Taylor's birthday problem**. \n",
     "\n",
@@ -1091,7 +1091,7 @@
    "source": [
     "### Analysis: Taylor's Birthday Problem\n",
     "\n",
-    "**Q3: Looking back at your calculations and histogram of simulation results, comment on whether you think it's likely that Taylor will have her birthday request fulfilled at the UIUC Quad Concert of 2000 people.**"
+    "**Q3: Looking back at your calculations and histogram of simulation results, comment on whether you think it's likely that Taylor will have her birthday request fulfilled at the UIUC Quad Concert of 2,000 people.**"
    ]
   },
   {
